# pythonclaw

./: .gitignore  README.md  pyproject.toml
configs/: example.json
pythonclaw/: __init__.py  cli.py  config.py  dotenv.py  gateway.py  memory.py  session.py  setup.py  tools.py
pythonclaw/agents/: __init__.py  base.py  router.py
pythonclaw/channels/: __init__.py  base.py  cli.py  discord.py  slack.py  telegram.py  webchat.py
pythonclaw/providers/: __init__.py  anthropic.py  base.py  echo.py  openai.py
pythonclaw/web/: dashboard.py
tests/: test_gateway.py
